--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.container{
+    width: 80%;
+    margin: auto;
+}
+@media screen and (max-width:900px) {
+    .container{
+        width: 100%;
+        padding: 10px;
+        box-sizing: border-box;
+    }
+}
