--- a/src/components/footer/footer.component.html
+++ b/src/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="footer">
-        <p>{{englishDate}}</p>
-        <p>{{arabicDate}}</p>
+        <p>{{language ==="en"?englishDateEN:englishDateAR}}</p>
+        <p>{{language ==="en"?arabicDateEN:arabicDateAR}}</p>
     </div>
 </div>
