--- a/src/components/admin/admin.component.html
+++ b/src/components/admin/admin.component.html
@@ -9,6 +9,7 @@
             <mat-icon>add</mat-icon>
         </button>
    
+   
     </div>
 
     <div class="mat-elevation-z8">
@@ -16,36 +17,36 @@
             
             <!-- ID Column -->
             <ng-container matColumnDef="id">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'id'|translate}} </th>
         <td mat-cell *matCellDef="let row"> {{row.id}} </td>
       </ng-container>
   
       <!-- Progress Column -->
       <ng-container matColumnDef="category">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> category </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>  {{'category'|translate}}</th>
           <td mat-cell *matCellDef="let row"> {{row.category}} </td>
         </ng-container>
         
       <!-- Progress Column -->
       <ng-container matColumnDef="arQuestion">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> arQuestion </th>
-          <td mat-cell *matCellDef="let row"> {{row.arQuestion}}</td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>   {{'question'|translate}} </th>
+          <td mat-cell *matCellDef="let row"> {{currentLang == "en"?row.enQuestion:row.arQuestion}}</td>
         </ng-container>
         
         <!-- Name Column -->
         <ng-container matColumnDef="arAnswer">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> arAnswer </th>
-            <td mat-cell *matCellDef="let row"> {{row.arAnswer}} </td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>   {{'answer'|translate}} </th>
+            <td mat-cell *matCellDef="let row"> {{currentLang == "en"?row.enAnswer:row.arAnswer}}</td>
         </ng-container>
         
         <!-- Fruit Column -->
         <ng-container matColumnDef="control">
-            <th mat-header-cell *matHeaderCellDef > control </th>
+            <th mat-header-cell *matHeaderCellDef >  {{('action'|translate)}} </th>
             <td mat-cell *matCellDef="let row">
                 <div class="sa-d-flex">
-                    <button mat-raised-button color="primary" (click)="updateQuestion(row)">edit</button>
-                    <button mat-raised-button color="primary" (click)="hideQuestion(row)">{{row.visibility?"hide":'show'}}</button>
-                    <button mat-raised-button color="warn" (click)="deleteQuestion(row)">delete</button>
+                    <button mat-raised-button color="primary" (click)="updateQuestion(row)">{{currentLang == "en"?"edit":"تعديل"}}</button>
+                    <button mat-raised-button color="primary" (click)="openDialog(row,'toggleVisibilty')">{{row.visibility?('hide' |translate):('show' |translate)}}</button>
+                    <button mat-raised-button color="warn"  (click)="openDialog(row,'delete')">{{"delete"|translate}}</button>
                 </div>
             </td>
         </ng-container>
