--- a/src/components/website/website.component.css
+++ b/src/components/website/website.component.css
@@ -43,4 +43,8 @@
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
   }
+  .sa-center{
+    margin-top: 50px;
+    text-align: center;
+  }
   
