--- a/src/components/footer/footer.component.css
+++ b/src/components/footer/footer.component.css
@@ -1,4 +1,10 @@
+
 .footer{
     display: flex;
     justify-content: space-between;
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 80%;
 }
