--- a/src/components/website/website.component.css
+++ b/src/components/website/website.component.css
@@ -47,4 +47,11 @@
     margin-top: 50px;
     text-align: center;
   }
+  .hide{
+    visibility: hidden;
+    height: 0;
+  }
+.sa-m-5{
+  margin: 5px;
+}
   
