--- a/src/styles.css
+++ b/src/styles.css
@@ -11,5 +11,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
         width: 100%;
         padding: 10px;
         box-sizing: border-box;
+        position: relative;
     }
 }
